--- a/client/strength-bros/src/App.css
+++ b/client/strength-bros/src/App.css
@@ -1,10 +1,6 @@
 .App {
+  margin: auto;
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
 }
 
 .App-header {
@@ -18,15 +14,7 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-title{
+  font-size: 2em;
+  
 }
