--- a/client/strength-bros/src/App.css
+++ b/client/strength-bros/src/App.css
@@ -1,20 +1,20 @@
 .App {
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
+  justify-content: space-between;
   margin: auto;
   text-align: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.gridChild{
+  display: grid;
 }
 
+.error{
+  color: red;
+}
 .nav-title{
-  font-size: 2em;
-  
+  font-size: 1.5em;
+  text-align: center;
+  color: grey;
 }
