--- a/client/strength-bros/src/index.css
+++ b/client/strength-bros/src/index.css
@@ -13,6 +13,14 @@ code {
     monospace;
 }
 
+.athlete-view {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 50%;
+}
+
 .player {
   height: 100;
   width: 50;
